{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Controls",
            "id": "af7b9a6e-29c4-471e-9567-7215431f3cf5",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "PassThrough",
                    "id": "6de5bdb8-e89a-44bd-a1ee-d29e0cd4521f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "PrimaryTouchPosition",
                    "type": "PassThrough",
                    "id": "2dfaeec1-0529-4d7a-9f64-8a7241f63917",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Press",
                    "type": "PassThrough",
                    "id": "2ceef6d0-e15d-498a-a5ce-526d4dbecb45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "SecondaryTouch",
                    "type": "Button",
                    "id": "7c756535-a4de-4cfb-be2f-2ad88066b998",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "26446bd9-d1df-419d-afda-effee9645983",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ed3cd7a-08fe-48aa-9992-6aadfb0ffdaa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0507f3ea-85a1-4c30-a5a6-0a4031059b84",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66e26c5c-16d5-4bb3-a8c4-ca3e9cfa04d7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a16a3bb-06fb-4b17-bb7e-2bbc3753c0b6",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c6947b8-7a6b-4b70-8e75-035f35fcfb7e",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05d8400c-2878-45f1-9d5c-cf5bd042aca9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}